; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_mptcp_subr.c_mptcp_sopt_insert.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_mptcp_subr.c_mptcp_sopt_insert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mptses = type { i32 }
%struct.mptopt = type { i32 }

@MPOF_ATTACHED = common dso_local global i32 0, align 4
@mpo_entry = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mptcp_sopt_insert(%struct.mptses* %0, %struct.mptopt* %1) #0 {
  %3 = alloca %struct.mptses*, align 8
  %4 = alloca %struct.mptopt*, align 8
  store %struct.mptses* %0, %struct.mptses** %3, align 8
  store %struct.mptopt* %1, %struct.mptopt** %4, align 8
  %5 = load %struct.mptses*, %struct.mptses** %3, align 8
  %6 = call i32 @mpte_lock_assert_held(%struct.mptses* %5)
  %7 = load i32, i32* @MPOF_ATTACHED, align 4
  %8 = load %struct.mptopt*, %struct.mptopt** %4, align 8
  %9 = getelementptr inbounds %struct.mptopt, %struct.mptopt* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = or i32 %10, %7
  store i32 %11, i32* %9, align 4
  %12 = load %struct.mptses*, %struct.mptses** %3, align 8
  %13 = getelementptr inbounds %struct.mptses, %struct.mptses* %12, i32 0, i32 0
  %14 = load %struct.mptopt*, %struct.mptopt** %4, align 8
  %15 = load i32, i32* @mpo_entry, align 4
  %16 = call i32 @TAILQ_INSERT_TAIL(i32* %13, %struct.mptopt* %14, i32 %15)
  ret void
}

declare dso_local i32 @mpte_lock_assert_held(%struct.mptses*) #1

declare dso_local i32 @TAILQ_INSERT_TAIL(i32*, %struct.mptopt*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
